# zan-chat

./: README.md  run.sh
zanChat/: chatWindow.c  configure.ac  createSettings.c  createStatusMenu.c  main.c
zanChat/Include/: calculator.h  calendar.h  callback.h  chatRecord.h  chatWindow.h  converter.h  createStatusMenu.h  dateConverter.h  fileTrans.h  linpop.h  message.h  models.h  msg_list.h  picConverter.h  rightClick.h  screenShot.h  strToPixbufConverter.h  userInfo.h
zanChat/Lib/Converter/: UTF16ToUTF8Converter.c  dateConverter.c  picConverter.c  strToPixbufConverter.c
zanChat/Lib/Helper/: callback.c  chatRecord.c  msg_list.c  rightClick.c  timeHelper.c  userInfo.c
zanChat/Lib/Tools/: calculator.c  calendar.c  screenShot.c
zanChat/Lib/Trans/: fileTrans.c  messageParser.c  receive.c  send.c  sendMsg.c
zanChat/Users/: login
zanChat/users/: log
